apps/homer/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: homer
spec:
  ports:
    - port: 80
      targetPort: homer
  selector:
    app.kubernetes.io/name: homer
